<?xml version="1.0"?>
<package>
  <name>is_kobuki</name>
  <version>1.0.0</version>
  <description>The is_kobuki package</description>

  <maintainer email="is_team@todo.todo">IS Team</maintainer>

  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Ros -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>

  <!-- Ecl -->
  <build_depend>ecl_exceptions</build_depend>
  <build_depend>ecl_threads</build_depend>
  <build_depend>ecl_time</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <!-- Kobuki -->
  <build_depend>kobuki_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <!-- Ros -->
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>

  <!-- Ecl -->
  <run_depend>ecl_exceptions</run_depend>
  <run_depend>ecl_threads</run_depend>
  <run_depend>ecl_time</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <!-- Kobuki -->
  <run_depend>kobuki_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>

  <!-- Yujin ocs -->
  <run_depend>yocs_cmd_vel_mux</run_depend>
  <run_depend>yocs_velocity_smoother</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
